--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SamdoApplication</string>
+    <string name="backbtn">뒤로가기 버튼을 한번 더 누르면 종료됩니다</string>
 </resources>
